--- a/templates/index.html
+++ b/templates/index.html
@@ -1,419 +1,13 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Flask App</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-</head>
-<body>
-    <h1>Hello, World!</h1>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-</body>
-</html>
- -->
-
- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deliverect Clone</title>
+    <title>Isaac Reeder</title>
     <link rel="stylesheet" href="static/css/styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/48446810?s=280&v=4" type="image/png">
 
-        header {
-            background-color: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1em 2em;
-        }
-
-        .navbar a {
-            text-decoration: none;
-            color: #333;
-            margin: 0 1em;
-        }
-
-        .navbar .logo {
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-
-        .navbar-button {
-            padding: .7em 1.3em;
-            background-color: #038851;
-            color: #fff;
-            border: none;
-            font-size: 1em;
-            cursor: pointer;
-            margin-top: 1em;
-            border-radius: 25px;
-            font-family: GT Pressura,Arial,sans-serif;
-            font-weight: 600;
-        }
-
-        /* Toppest */
-
-        .topest-navbar {
-            height: 35px;
-            background-color: #1c1c1c;
-            display: flex;
-            align-items: center;
-            justify-content: center;  
-            color: #ffffff;  
-            padding: 0 20px;  
-        }
-
-        .navbar-text p {
-            margin: 0;
-            font-size: 14px;
-        }
-
-        .arrow {
-            color: #e0e0e0;  
-            font-size: 20px;
-            cursor: pointer;
-            margin: 0 20px; /* 20px spacing arrows & text */
-        }
-
-        .left-container,
-        .right-container {
-            display: flex;
-            align-items: center;
-        }
-
-
-
-        .hero {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 90vh;
-            background: url('static/images/hero.jpg') no-repeat center center/cover;
-            color: #080000;
-            text-align: center;
-            margin-top: 60px; /* To account for the fixed header */
-            
-        }
-
-        .hero h1 {
-            font-size: 64px;
-            margin: 0.5em 0;
-            font-family: GT Pressura,Arial,sans-serif;
-            line-height: 1;
-            font-weight: 600;
-        }
-
-        .hero h4 {
-            margin: 0.5em 0;
-            font-family: GT Pressura,Arial,sans-serif;
-            font-weight: 600;
-            color: #038851;
-        }
-
-        .hero h5 {
-            margin: 0.5em 0;
-            font-family: GT Pressura,Arial,sans-serif;
-            font-weight: 600;
-            color: #038851;
-        }
-
-        .hero p {
-            font-size: 1em;
-            margin: 0.5em 0;
-            color:#4f4f4f;
-            
-        }
-
-        .hero .cta {
-            padding: 1em 2em;
-            background-color: #038851;
-            color: #fff;
-            border: none;
-            font-size: 1em;
-            cursor: pointer;
-            margin-top: 1em;
-            border-radius: 25px;
-            font-family: GT Pressura,Arial,sans-serif;
-            font-weight: 600;
-        }
-
-        .section {
-            padding: 4em 2em;
-            text-align: center;
-        }
-
-        .section h2 {
-            font-size: 2em;
-            margin-bottom: 1em;
-        }
-
-        .section p {
-            font-size: 1.2em;
-            margin-bottom: 2em;
-        }
-
-        .features {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-        }
-
-        .feature {
-            background-color: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 2em;
-            margin: 1em;
-            flex-basis: 30%;
-            text-align: left;
-        }
-
-        .feature h3 {
-            font-size: 1.5em;
-            margin-bottom: 0.5em;
-        }
-
-        .feature p {
-            font-size: 1em;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em 0;
-        }
-
-        footer p {
-            margin: 0;
-        }
-
-        /* Images grid */
-        
-        .container {
-            width: 80%;
-            margin: auto;
-            display: grid;
-            /* grid-template-columns: repeat(4, 1fr); */
-            grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
-            gap: 1px;
-            align-items: center;
-            justify-items: center;
-        }
-
-        .text-boxy {
-            grid-column: span 1;
-            color: #4f4f4f;
-            text-align: center;
-            padding: 20px;
-            line-height: 1.2;
-            white-space: nowrap;
-        }
-
-        .text-boxy h4 {
-            margin: 0;
-            font-size: 1em;
-            color: #4f4f4f;
-            /* white-space: pre-line; */
-        }
-
-        .image-box {
-            grid-column: span 1;
-            width: 10%;
-        }
-
-        .image-box img {
-            width: 70px;
-            height: auto;
-            display: block;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-
-        @media (max-width: 480px) {
-            .container {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        /* Login */
-
-        .log-body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center; /* Center horizontally */
-            align-items: center; /* Center vertically */
-            /* height: 10vh; */
-            margin-top:50px;
-            margin-bottom:50px;
-            background-color: #f5f5f5;
-        }
-
-        .login-container {
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            width: 300px;
-        }
-
-        .login-container h2 {
-            margin-top: 0;
-        }
-
-        .login-container .input-group {
-            margin-bottom: 15px;
-        }
-
-        .login-container .input-group label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-        }
-
-        .login-container .input-group input {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-        }
-
-        .login-container button {
-            background-color: #038851;
-            color: #fff;
-            border: none;
-            border-radius: 25px;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: 600;
-        }
-
-        .login-container button:hover {
-            background-color: #e417c9;
-        }
-
-        /* Form styling */
-
-        .signup-form {
-            max-width: 300px;
-            margin: 0 auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #f9f9f9;
-        }
-
-        .input-field {
-            width: 100%;
-            padding: 10px;
-            margin: 5px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        .submit-button {
-            background-color: #038851;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 16px;
-            border-radius: 25px;
-            font-weight: 600;
-        }
-
-        .submit-button:hover {
-            background-color: #027240;
-        }
-
-        /* Upload form */
-
-        .upload-form {
-            max-width: 300px;
-            margin: 0 auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #f9f9f9;
-        }
-
-        .file-input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        .submit-button {
-            background-color: #038851;
-            color: #fff;
-            border: none;
-            border-radius: 25px;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: 600;
-        }
-
-        .submit-button:hover {
-            background-color: #027240;
-        }
-
-
-
-        /* Responsive bits */
-
-        @media (max-width: 768px) {
-            /* Adjustments for tablets and smaller devices */
-            .container {
-                grid-template-columns: repeat(2, 1fr);
-            }
-
-            .login-container {
-                width: 80%; /* Adjust width for smaller screens */
-            }
-        }
-
-        @media (max-width: 480px) {
-            /* Adjustments for mobile devices */
-            .container {
-                grid-template-columns: 1fr;
-            }
-
-            .login-container {
-                width: 90%; /* Adjust width for even smaller screens */
-            }
-        }
-
-    </style>
+    
 </head>
 <body>
     <header>
@@ -474,6 +68,8 @@
             <div class="image-box"><img src="//images.ctfassets.net/sv4wepqk8nm7/5CWwveIEUdA1O2YbE85Tag/ac0401beffef7b65ba778ced59cc7de5/Taco-bell-logo.svg" alt="Image 3"></div>
             <div class="image-box"><img src="//images.ctfassets.net/sv4wepqk8nm7/5F2jK2namNpll7FKUPERi4/ee9d6922eaa936a998142ada1e1353fb/Burger_King_logo-01.svg" alt="Image 4"></div>
             <div class="image-box"><img src="//images.ctfassets.net/sv4wepqk8nm7/5JE6Dg5VRic26xETFM3bMi/43516a0ac97e48e57771ef44b9e3b395/ben_Jerry_logo-01.svg" alt="Image 5"></div>
+            <div class="image-box"><img src="//images.ctfassets.net/sv4wepqk8nm7/6SRq4tHclXM9QHsWVHYdIc/14365496c590557bb3f837034c415ed3/Popeyes-logo.svg" alt="Image 5"></div>
+
         </div>
     </section>
 
@@ -481,11 +77,6 @@
 
         <!-- XSS Vuln -->
         <h1>Sign Up to Our Email Newsletter</h1>
-        <!-- <form action="/signup" method="post">
-            <label for="email">Email:</label><br>
-            <input type="text" id="email" name="email"><br><br>
-            <input type="submit" value="Sign Up">
-        </form> -->
         <form action="/signup" method="post" class="signup-form">
             <label for="email">Email:</label><br>
             <input type="text" id="email" name="email" class="input-field"><br><br>
@@ -501,10 +92,6 @@
         </div>
         
         <h2>Please upload your resume below, and we'll be in touch.</h2>
-        <!-- <form action="/upload" method="post" enctype="multipart/form-data">
-            <input type="file" name="file">
-            <input type="submit" value="Upload">
-        </form> -->
         <form action="/upload" method="post" enctype="multipart/form-data" class="upload-form">
             <input type="file" name="file" class="file-input">
             <input type="submit" value="Upload" class="submit-button">
@@ -537,7 +124,7 @@
         </div>
 
         <hr>
-        <hr>
+        <hr>        
 
 
         <h2>Features</h2>
@@ -560,7 +147,7 @@
 
     <section id="about" class="section">
         <h2>About Us</h2>
-        <p>We help restaurants streamline their online food delivery operations.</p>
+        <p>Deliverect streamlines restaurant delivery operations by integrating multiple food delivery platforms into one easy-to-use dashboard. It helps restaurants efficiently manage orders from platforms like Uber Eats and DoorDash, reducing errors and improving customer satisfaction.</p>
     </section>
 
     <section id="contact" class="section">
